--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -25,8 +25,9 @@
 
     
     .banner {
-        height: 70vh;
+        height: 650px;
         background-position: center;
+
     }
 
     .section {
