--- a/scss/main.scss
+++ b/scss/main.scss
@@ -225,7 +225,7 @@ h2 {
             width: 100%;
             height: 100%;
             z-index: -2;
-            background-color: #f18700;
+            background: #f18700;
         }
         img {
             position: absolute;
@@ -361,7 +361,7 @@ h2 {
                     &-wrap {
                         text-align: center;
                         margin-top: 25%;
-                        transform: translateY(-50%);
+                        transform: translateY(0%);
                     }
                 }
 
@@ -407,7 +407,7 @@ h2 {
                     &-wrap {
                         text-align: center;
                         margin-top: 25%;
-                        transform: translateY(-50%);
+                        transform: translateY(0%);
                     }
                 }
 
@@ -453,7 +453,7 @@ h2 {
                     &-wrap {
                         text-align: center;
                         margin-top: 25%;
-                        transform: translateY(-50%);
+                        transform: translateY(0%);
                     }
                 }
 
