--- a/scss/main.scss
+++ b/scss/main.scss
@@ -330,8 +330,7 @@ h2 {
         position: absolute;
         background-color: $blue;
         padding: 1.5em;
-        margin-bottom: 7.5em;
-        margin-top: 5%;
+        margin: 5% 1.25em 7.5em 1.25em;
         transform: translateY(-25%);
 
         p {
