--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,7 +65,7 @@ $ruota: url('../asset/gif/ruota.gif');
 
 .bg-cucina {
     position: relative;
-    padding-top: 25%;
+    padding-top: 5%;
 
     &-inner {
         background: $bg-cucina-mobile;
@@ -532,6 +532,12 @@ h2 {
 //footer 
 footer {
     color: #fff;
+
+    ul {
+        display: block;
+        margin: auto;
+        width: fit-content;
+    }
 }
 
 //Import
