--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -55,7 +55,9 @@
     .banner {
         height: 650px;
         background-position: center;
-
+        &-wrap {
+            height: 650px;  
+        }
     }
 
     .section {
