--- a/scss/_desktop.scss
+++ b/scss/_desktop.scss
@@ -35,6 +35,7 @@
                 img {
                     position: absolute;
                     bottom: 0;
+                    max-height: 550px;
                 }
             }
         }
