--- a/scss/main.scss
+++ b/scss/main.scss
@@ -58,9 +58,9 @@ $bg-img: url('../asset/jpg/banner-mobile.jpg');
 $bg-cucina: url('../asset/jpg/cucina.jpg');
 $bg-cucina-mobile: url('../asset/jpg/cucina-mobile.jpg');
 $bg-map: url('../asset/jpg/map.jpg');
-$colly-a: url('../asset/jpg/colly_a.jpeg');
-$colly-b: url('../asset/jpg/colly_b.jpeg');
-$colly-c: url('../asset/jpg/colly_c.jpeg');
+$colly-a: url('../asset/webp/musica.webp');
+$colly-b: url('../asset/webp/cinema.webp');
+$colly-c: url('../asset/webp/teatro.webp');
 $ruota: url('../asset/gif/ruota.gif');
 
 .bg-cucina {
