--- a/scss/_map.scss
+++ b/scss/_map.scss
@@ -22,8 +22,13 @@
         &_1 {
           top: 345px;
           left: 150px;
+          transition: transform .5s;
+          &:hover {
+            transform: scale(1.15);
+          }
           .cls-1 {
             fill:#ff8661;
+            
           }
           .cls-2 {
             fill:#e8755b;
@@ -50,25 +55,59 @@
       &#bar {
         top: 167px;
         left: 222px;
+        transition: transform .5s;
+        &:hover {
+          transform: scale(1.05) rotate(15deg);
+        }
         .cls-1{fill:#7db98a;}.cls-2{fill:#7d957a;}.cls-3{fill:#94ca90;}
       } 
 
       &#stage {
         left: 437px;
         top: 155px;
+        transition: transform .5s;
+        &:hover {
+          transform: scale(1.05);
+        }
         .cls-1{fill:none;}.cls-2{isolation:isolate;}.cls-3{fill:#cadbe0;}.cls-4{fill:#afbcbf;}.cls-5{clip-path:url(#clip-path);}.cls-6{fill:#a67c52;}.cls-7{fill:#c69c6d;}.cls-8,.cls-9{fill:#fff;mix-blend-mode:soft-light;}.cls-9{opacity:0.48;}.cls-10{fill:url(#linear-gradient);}.cls-11,.cls-13,.cls-16,.cls-18,.cls-20,.cls-22,.cls-25,.cls-27,.cls-29,.cls-31,.cls-33,.cls-36{opacity:0.5;}.cls-11,.cls-13,.cls-15,.cls-16,.cls-18,.cls-20,.cls-22,.cls-24,.cls-25,.cls-27,.cls-29,.cls-31,.cls-33,.cls-35,.cls-36{mix-blend-mode:multiply;}.cls-11{fill:url(#linear-gradient-2);}.cls-12{fill:url(#linear-gradient-3);}.cls-13{fill:url(#linear-gradient-4);}.cls-14{fill:url(#linear-gradient-5);}.cls-15,.cls-24,.cls-35{opacity:0.2;}.cls-15{fill:url(#linear-gradient-6);}.cls-16{fill:url(#linear-gradient-7);}.cls-17{fill:url(#linear-gradient-8);}.cls-18{fill:url(#linear-gradient-9);}.cls-19{fill:url(#linear-gradient-10);}.cls-20{fill:url(#linear-gradient-11);}.cls-21{fill:url(#linear-gradient-12);}.cls-22{fill:url(#linear-gradient-13);}.cls-23{fill:url(#linear-gradient-14);}.cls-24{fill:url(#linear-gradient-15);}.cls-25{fill:url(#linear-gradient-16);}.cls-26{fill:url(#linear-gradient-17);}.cls-27{fill:url(#linear-gradient-18);}.cls-28{fill:url(#linear-gradient-19);}.cls-29{fill:url(#linear-gradient-20);}.cls-30{fill:url(#linear-gradient-21);}.cls-31{fill:url(#linear-gradient-22);}.cls-32{fill:url(#linear-gradient-23);}.cls-33{fill:url(#linear-gradient-24);}.cls-34{fill:url(#linear-gradient-25);}.cls-35{fill:url(#linear-gradient-26);}.cls-36{fill:url(#linear-gradient-27);}
         }
       
       &#panoramik {
         left: 58px;
         top: 105px;
-        .cls-1{fill:#b3b3b3;}.cls-2{fill:#d2d2d2;}.cls-3{fill:#c6915d;}.cls-4{fill:#edb26e;}.cls-5{fill:#93969d;}.cls-6{fill:#7b7d84;}.cls-7{fill:#a0a1a6;}.cls-8{fill:#898c93;}.cls-9{fill:#afb0b4;}.cls-10{fill:#aeafb4;}.cls-11{fill:#968d86;}.cls-12{fill:#8a817a;}.cls-13{fill:#999189;}.cls-14{fill:#8b837c;}.cls-15{fill:#a29990;}.cls-16{fill:#aca39a;}.cls-17{fill:#aba299;}
+        
+        .cls-1{
+          fill:#b3b3b3;
+          transition: transform .5s;
+          &:hover {
+            fill:#d2d2d2;
+          }}
+        .cls-2{fill:#d2d2d2;}
+        .cls-3{fill:#c6915d;}
+        .cls-4{fill:#edb26e;}
+        .cls-5{fill:#93969d;}
+        .cls-6{fill:#7b7d84;}
+        .cls-7{fill:#a0a1a6;}
+        .cls-8{fill:#898c93;}
+        .cls-9{fill:#afb0b4;}
+        .cls-10{fill:#aeafb4;}
+        .cls-11{fill:#968d86;}
+        .cls-12{fill:#8a817a;}
+        .cls-13{fill:#999189;}
+        .cls-14{fill:#8b837c;}
+        .cls-15{fill:#a29990;}
+        .cls-16{fill:#aca39a;}
+        .cls-17{fill:#aba299;}
         }
 
       &#gazebo {
         &_1 {
           left: 424px;
           top: 387px;
+          transition: transform .5s;
+          &:hover {
+            transform: scale(1.05) rotate(45deg);
+          }
           .cls-1{isolation:isolate;}.cls-2{fill:#fff;}.cls-3{fill:#c4bd45;}.cls-4{fill:#b8b121;}.cls-5{fill:#b7af1c;}.cls-6{fill:#e9e367;}.cls-7{fill:#eae368;}.cls-8{fill:#e9e262;}.cls-9{fill:#e8e15f;}.cls-10{fill:#e8e15d;}.cls-11{fill:#f6d34b;}.cls-12{fill:#f6d349;}.cls-13{fill:#f6d44c;}.cls-14{fill:#e9e263;}.cls-15{fill:#e28623;}.cls-16{fill:#f6d44e;}.cls-17{fill:#e8e260;}.cls-18{fill:#eae46c;}.cls-19,.cls-20,.cls-22,.cls-23,.cls-24{fill:#ce8f29;}.cls-19,.cls-21{opacity:0.4;}.cls-19,.cls-20,.cls-22,.cls-23,.cls-24,.cls-25{mix-blend-mode:multiply;}.cls-20{opacity:0.5;}.cls-21{fill:#406980;mix-blend-mode:screen;}.cls-22{opacity:0.2;}.cls-23{opacity:0.24;}.cls-24{opacity:0.34;}.cls-25{fill:#f5d13f;opacity:0.32;}        
         }
         &_2 {
@@ -81,6 +120,10 @@
       &#park {
         left: 795px;
         top: 630px;
+        transition: transform .5s;
+          &:hover {
+            transform: scale(1.1);
+          }
         .cls-1{fill:#0083cb;}.cls-2{fill:#fff;}
       }
     }
@@ -103,3 +146,4 @@
       box-shadow: 0 0 0 0 rgba(248, 168, 45, 0);
     }
   }
+
